spade-tests/src/snapshots/spade_tests__typeinference__expected_a_number_when_bitwise_inverting_an_enum_variant.snap
---
source: spade-tests/src/typeinference.rs
---
entity main() -> uint<8> {
    ~None
}

error: Trait bound not satisfied. std::option::Option<core::marker::Data> does not implement core::ops::BitNot
  ┌─ testinput:2:6
  │
2 │     ~None
  │     -^^^^ std::option::Option<core::marker::Data> does not implement core::ops::BitNot
  │     │ 
  │     Required because of the trait bound specified here
